# Professional-CMake

Part I - Geting Started/: README.md
Part II - Fundamentals/: README.md
Part II - Fundamentals/variables/: CMakeLists.txt  README.md
Part II - Fundamentals/variables/src/: CMakeLists.txt
Part II - Fundamentals/variables/src/variablesub/: CMakeLists.txt
