message("src:           CMAKE_SOURCE_DIR         = ${CMAKE_SOURCE_DIR}")
message("src:           CMAKE_BINARY_DIR         = ${CMAKE_BINARY_DIR}")
message("src:           CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
message("src:           CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")

add_subdirectory(variablesub)

message("src:           CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
message("src:           CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
